--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -18,6 +18,17 @@ body {
   color: #545149;
   background-color: #f4f1ec;
   font-size: 24px;
+  font-family: 'Source Sans Pro', sans-serif;
+}
+
+.container {
+  padding-right: 5%;
+  padding-left: 5%;
+  justify-content: center; 
+  text-align: center;
+  display: flex;
+  flex-direction: column; 
+
 }
 
 /*
