--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -1,7 +1,8 @@
+@media only screen and (min-width: 1024px) {
 .tweetform {
   background-color: #f4f1ec;
   resize: none;
-  width: 90%; 
+  width: 600px; 
   border: none; 
   border-bottom: 5px solid rgb(80, 41, 10);
 }
@@ -110,6 +111,8 @@
     color: #96c9a3;
     font-weight: bold; 
     margin-left: auto;
+    padding: 20px; 
+    font-size: 25px; 
   }
 
   .parent {
@@ -119,7 +122,12 @@
   }
 
   .new-tweet {
-    margin-top: 24px; 
+    margin-top: 24px;
+    display: flex;  
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column; 
   }
 
   .text {
@@ -133,3 +141,26 @@
   .margin_top {
     padding: 10px; 
   }
+
+  .name {
+    padding: 20px; 
+    font-size: 25px; 
+  }
+
+  #error1, #error2
+  {
+    padding: 10px; 
+    width: 600px;
+    border: 3px solid #a1404b;
+    border-radius: 20px; 
+    align-items: center;
+    justify-content: center;
+    margin: 10px;
+    color: #a1404b;
+    font-size: 20px; 
+    font-weight: bold;
+
+  
+
+
+  } }
