--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -3,7 +3,7 @@
  * https://css-tricks.com/international-box-sizing-awareness-day/
  * Do not modify these two selectors, please
  */
-html {
+ html {
   box-sizing: border-box;
 }
 *, *:before, *:after {
@@ -19,10 +19,17 @@ body {
   background-color: #f4f1ec;
   font-size: 24px;
   font-family: 'Source Sans Pro', sans-serif;
-  flex-flow: row wrap;
-
 }
 
+.container {
+  margin-top: 18px;
+  width: 100%;
+  justify-content: center; 
+  text-align: center;
+  display: flex;
+  flex-direction: column; 
+
+}
 
 /*
  * Additional CSS can be defined below or in other CSS files, as per instructions
