--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -1,8 +1,7 @@
-@media only screen and (min-width: 1024px) {
 .tweetform {
   background-color: #f4f1ec;
   resize: none;
-  width: 600px; 
+  width: 90%; 
   border: none; 
   border-bottom: 5px solid rgb(80, 41, 10);
 }
@@ -111,8 +110,6 @@
     color: #96c9a3;
     font-weight: bold; 
     margin-left: auto;
-    padding: 20px; 
-    font-size: 25px; 
   }
 
   .parent {
@@ -121,13 +118,9 @@
     width: 100%;
   }
 
-  .new-tweet {
-    margin-top: 24px;
-    display: flex;  
-    width: 100%;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column; 
+  .new_tweet {
+    margin-top: 50px; 
+    width: 50%;
   }
 
   .text {
@@ -141,26 +134,3 @@
   .margin_top {
     padding: 10px; 
   }
-
-  .name {
-    padding: 20px; 
-    font-size: 25px; 
-  }
-
-  #error1, #error2
-  {
-    padding: 10px; 
-    width: 600px;
-    border: 3px solid #a1404b;
-    border-radius: 20px; 
-    align-items: center;
-    justify-content: center;
-    margin: 10px;
-    color: #a1404b;
-    font-size: 20px; 
-    font-weight: bold;
-
-  
-
-
-  } }
