--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -18,5 +18,36 @@ h2 {
   background-color: #40A15A;
 background-image: url("https://www.transparenttextures.com/patterns/church.png");
 margin: 0px;
+padding-bottom: 30px; 
+padding-top: -10px; 
 color: papayawhip;
+}
+
+#error1, #error2
+{
+
+  border: 3px solid #a1404b;
+  border-radius: 20px; 
+  align-items: center;
+  justify-content: center;
+  text-align: center; 
+  margin: 10px;
+  color: #a1404b;
+  font-size: 20px; 
+  font-weight: bold;
+  padding: 2px; 
+} 
+
+
+@media only screen and (min-width: 1024px) {
+
+  .avatar {
+    width: 50%;
+    margin: 2em;
+    position: absolute; 
+    left: -60%; 
+
+
+  }
+
 }
